# KiCAD-FreeCAD-TechDraw-Template-Generator

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.01bca2b  CMakeLists.txt.user.NCioKn  CMakeLists.txt.user.fce6e8a  CODESTYLE.md  Doxyfile.in  FreeCADTemplate.py  KiCADTemplate.py  PDFTemplate.py  README.md  StandardDraw.py  Templategenerator-KiCAD_FreeCAD_TechDraw.pyproject  UniversalDraw.py  asme_y14_35_width180.cpp  asme_y14_35_width180.h  asme_y14_35_width180.ui  changetitelblockfield.cpp  changetitelblockfield.h  changetitelblockfield.ui  creatExamples.py  form.ui  form.uiZone.Identifier  fullsheetspartlistoptions.cpp  fullsheetspartlistoptions.h  iso7200options.cpp  iso7200options.h  iso7200options.ui  loadesavesettings.cpp  loadesavesettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.py  mainwindow.ui  old_cmake-multi-platform.yml  smallpartslistoptions.cpp  smallpartslistoptions.h  templategen.cpp  (+15 more)
AppDir/: AppImage.cmake  KiCAD-FreeCAD-TechDraw-Template-Generator.desktop
Doc/: ARCHITECTURE.md  CMakeLists.txt  Doxyfile.in
Examples/: A2_ISO5457_ISO7200+3_flA4wb_ki5.kicad_wks  A2_ISO5457_ISO7200+3_flA4wb_ki6.kicad_wks  A2_ISO5457_ISO7200+3_flA4wb_ki7.kicad_wks  A3_ISO5457_ISO7200+3_flA4wb_ki5.kicad_wks  A3_ISO5457_ISO7200+3_flA4wb_ki6.kicad_wks  A3_ISO5457_ISO7200+3_flA4wb_ki7.kicad_wks  A4L_ISO5457_ISO7200_ki5.kicad_wks  A4L_ISO5457_ISO7200_ki6.kicad_wks  A4L_ISO5457_ISO7200_ki7.kicad_wks  A4P_ISO5457_ISO7200_fspl+1_ki5.kicad_wks  A4P_ISO5457_ISO7200_fspl+1_ki6.kicad_wks  A4P_ISO5457_ISO7200_fspl+1_ki7.kicad_wks  A4P_ISO5457_ISO7200_ki5.kicad_wks  A4P_ISO5457_ISO7200_ki6.kicad_wks  A4P_ISO5457_ISO7200_ki7.kicad_wks  A4P_ISO5457_ISO7200_spl+3+1_ki5.kicad_wks  A4P_ISO5457_ISO7200_spl+3+1_ki6.kicad_wks  A4P_ISO5457_ISO7200_spl+3+1_ki7.kicad_wks  Std_BOM_Example_1.csv  sheet_template_eagle_6-5.lbr
KiCAD_Symbol_Scaler/: kicad_symbol_scaler.cpp  kicad_symbol_scaler.h  kicad_symbol_scaler_ui.cpp  kicad_symbol_scaler_ui.ui
Src/: CMakeLists.txt  asme_y14_35_width180.cpp  changetitelblockfield.cpp  changetitelblockfield.h  fullsheetspartlistoptions.h  fullsheetspartlistoptions.ui  iso7200options.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview.h  smallpartslistoptions.h  smallpartslistoptions.ui  templategen.cpp  templategen.h  templategeneagle.cpp  templategeneagle.h  templategenfreecad.cpp  templategenfreecad.h  templategenkicad_5.cpp  templategenkicad_5.h  templategenkicad_6.cpp  templategenkicad_6.h  templategenkicad_7.cpp  templategenpdf.cpp  templategenpdf.h  templateoptions.cpp  templateoptions.h
Src/Icon/: CMakeLists.txt
Src/KiCAD_Symbol_Scaler/: CMakeLists.txt  kicad_symbol_scaler.cpp  kicad_symbol_scaler.h  kicad_symbol_scaler_ui.cpp  kicad_symbol_scaler_ui.h
Src/PageLayout/: CMakeLists.txt  pagestyle.cpp  pagestyle.h
Src/PageLayout/FoldingLines/: CMakeLists.txt  foldinglines.cpp  foldinglines.h
Src/PageLayout/FoldingLines/DIN824ALike/: din824alike.cpp  din824alike.h
Src/PageLayout/FoldingLines/DIN824CLike/: din824clike.cpp  din824clike.h
Src/PageLayout/Frame/: CMakeLists.txt  pageframe.cpp  pageframe.h
Src/PageLayout/Frame/ISO5457/: iso5457frame.cpp  iso5457frame.h  iso5457framedialog.cpp  iso5457framedialog.h  iso5457framedialog.ui
Src/PageLayout/Frame/Plain/: plainframe.cpp  plainframe.h  plainframedialog.cpp  plainframedialog.h  plainframedialog.ui
Src/PageLayout/TitleBlock/: CMakeLists.txt  titleblock.cpp  titleblock.h
Src/PageLayout/TitleBlock/FreeCADA/: freecada.cpp  freecada.h
Src/PageLayout/TitleBlock/ISO7200A/: iso7200a.cpp  iso7200a.h  iso7200adialog.cpp  iso7200adialog.h  iso7200adialog.ui
Src/PageLayout/TitleBlock/ISO7200B/: iso7200b.cpp  iso7200b.h  iso7200bdialog.cpp  iso7200bdialog.h  iso7200bdialog.ui
Src/PageLayout/TitleBlock/Plain/: plaintitleblock.cpp  plaintitleblock.h  plaintitleblockdialog.cpp  plaintitleblockdialog.h  plaintitleblockdialog.ui
Src/PreView/: CMakeLists.txt  preview.cpp  preview.h
Src/TemplateGen/: CMakeLists.txt  templategen.cpp  templategen.h  templategeneagle.cpp  templategeneagle.h  templategenfreecad.cpp  templategenfreecad.h  templategenkicad_5.cpp  templategenkicad_5.h  templategenkicad_6.cpp  templategenkicad_6.h  templategenkicad_7.cpp  templategenkicad_7.h  templategenpdf.cpp  templategenpdf.h  templategensvg.cpp  templategensvg.h
Src/TemplateOptions/: CMakeLists.txt  asme_y14_35_width180options.cpp  asme_y14_35_width180options.h  iso5457options.cpp  iso5457options.h  iso7200options.cpp  iso7200options.h  templateoptions.cpp  templateoptions.h
Src/Templateoptions/: CMakeLists.txt  templateoptions.cpp  templateoptions.h
Src/Threads/: CMakeLists.txt  universaldrawthread.cpp  universaldrawthread.h
Src/UniversalDraw/: CMakeLists.txt  universaldraw.cpp  universaldraw.h
Src/UniversalDraw/FreeCADSvg/: freecadsvg.cpp  freecadsvg.h
Src/UniversalDraw/Html/: htmldraw.cpp  htmldraw.h
Src/UniversalDraw/KiCAD8/: kicad8.cpp  kicad8.h
Src/UniversalDraw/PdfQtPaint/: pdfqtpaint.cpp  pdfqtpaint.h
Src/UniversalDraw/PngQtPaint/: pngqtpaint.cpp  pngqtpaint.h
Src/UniversalDraw/PreView/: preview.cpp  preview.h
Src/UniversalDraw/QtPaint/: qtpainterdrawer.cpp  qtpainterdrawer.h
Src/UniversalDraw/Svg/: svgdraw.cpp  svgdraw.h
Src/UniversalDraw/SvgQtPaint/: svgqtpaint.cpp  svgqtpaint.h
Src/Utils/: CMakeLists.txt  logging.cpp  logging.h
Src/Window/: CMakeLists.txt  asme_y14_35_width180.cpp  asme_y14_35_width180.h  asme_y14_35_width180.ui  asme_y14_35_width180dialog.cpp  asme_y14_35_width180dialog.h  asme_y14_35_width180dialog.ui  changetitelblockfield.cpp  changetitelblockfield.h  fullsheetspartlistoptions.cpp  fullsheetspartlistoptions.h  fullsheetspartlistoptions.ui  iso5457dialog.cpp  iso5457dialog.h  iso5457dialog.ui  iso7200dialog.cpp  iso7200dialog.h  iso7200dialog.ui  iso7200options.cpp  iso7200options.h  iso7200options.ui  loadesavesettings.cpp  loadesavesettings.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  preview.cpp  preview.h  smallpartslistoptions.cpp  smallpartslistoptions.h  smallpartslistoptions.ui
(+4 files in other folders)
